--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="header">
   <div class="container">
     <div class="row">
-      <div class="col-xl-6">
+      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12-text-center d-flex justify-content-between ">
         <div class="nav-part-1">
           <ul class="list-icon">
             <li><i class="fa-brands fa-twitter text-white"></i></li>
@@ -27,14 +27,10 @@
           </ul>
         </div>
       </div>
-      <div class="col-xl-6">
+      <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
         <div class="nav-part-2">
-          <ul class="list-item">
-            <li class=" pt-2">
-              <i class="fa-solid fa-phone text-white"></i>
-              <a class="text-underline text-white">youremail@domain.com</a>
-          </li>
-          <li class="pe-3 pt-2">
+          <ul class="list-item text-end ms-5">
+          <li class="pe-3 pt-2 col-lg-6 col-md-12 col-sm-12 col-12-text-center">
               <i class="fa-solid fa-envelope text-white"></i>
               <a class="text-underline text-white">+1 291 2830 302</a>
           </li>
@@ -261,73 +257,80 @@
     <section class="sec-4">
       <p   class="fs-3 text-center ">Promo For Tooth Cleaning from $<del>140.00</del> now $50.00</p >
       <p class="text-center mt-5 sec-4-para"><strong class="fs-2 text-white"> 01</strong class="fs-2 text-white">weeks<strong class="fs-2 text-white"> 03</strong>days<strong class="fs-2 text-white"> 05</strong>hr<strong class="fs-2 text-white"> 05</strong>min<strong class="fs-2 text-white"> 30</strong>sec </p>
+      <ul>
+        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong></strong></a></li>
+        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong></strong></a></li>
+        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
+        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
+        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
+      </ul>
     </section>
     <section class="sec-5 mt">
       <div class="container">
         <p class="fs-1 text-center">OUR <strong>SERVICES</strong></p>
         <br><br><br>
         <div class="row">
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-right" data-aos-duration="800">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3" data-aos="fade-right" data-aos-duration="800">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/tooth-whitening.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-8 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">Tooth Whitening</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="900">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3" data-aos="fade-up" data-aos-duration="900">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/stethoscope-medical-tool.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-8 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">Medical Tool</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12" data-aos="fade-right" data-aos-duration="1000">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3" data-aos="fade-right" data-aos-duration="1000">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/dental-chair.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-6 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">Dental Chair</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-5 mb-5" data-aos="fade-right" data-aos-duration="2000">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3" data-aos="fade-right" data-aos-duration="2000">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/tooth-pliers.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-8 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">Tooth Pliers</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-5" data-aos="fade-up" data-aos-duration="1200">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3" data-aos="fade-up" data-aos-duration="1200">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/first-aid-kit.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-8 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">First Aid Kit Box</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
-          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-5 mb" data-aos="fade-right" data-aos-duration="1300">
+          <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-3 mb" data-aos="fade-right" data-aos-duration="1300">
             <div class="row">
-              <div class="col-xl-4">
+              <div class="col-xl-4 col-lg-4 col-md-6 col-sm-4 col-4">
                 <img src="img/dentist-tools.png" class="w-50">
               </div>
-              <div class="col-xl-8">
+              <div class="col-xl-8 col-lg-4 col-md-6 col-sm-8 col-8">
                 <h5 class="sec-4-para">Dentist Tool</h5>
                 <p class="sec-4-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
               </div>
@@ -339,12 +342,12 @@
   </div>
   <section class="sec-6">
     <div class="container-fluid">
-      <div class="row ps-5">
-        <div class="col-xl-6" data-aos="fade-down" data-aos-duration="2000">
+      <div class="row">
+          <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-down" data-aos-duration="2000">
             <p class="fs-1 text-center mt-5">SUCCESS<strong class="d-block">STORIES</strong></p> 
             <p class="sec-4-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iusto dolorum voluptates placeat fugit deleniti labore itaque non? Corporis omnis assumenda eligendi sapiente accusantium itaque nobis eveniet quam eos accusamus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt at unde ad impedit animi, molestiae optio iste eaque tempora ratione rem ducimus nulla aliquid ullam, maiores saepe eveniet ab eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus consectetur dolore eveniet. Corporis accusantium, debitis eum doloribus illo ea laborum adipisci unde, eius veritatis quam cumque laboriosam, illum esse?</p>         
         </div>
-        <div class="col-xl-6" data-aos="fade-up" data-aos-duration="2000">
+        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2000">
           <img src="img/hero_bg_1.jpg.webp" style="position: relative;" class="w-100">
           <!-- Button trigger modal -->
           <button type="button" style="position: absolute; bottom: 0; right: 0; left: 0px; top: 230px; height: 40px;" class="btn btn-danger width" data-bs-toggle="modal" data-bs-target="#exampleModal1">
@@ -453,7 +456,7 @@
         <div class="col-xl-12">
         <p class="fs-1 text-center">PEOPLE <strong>SAYS</strong></p>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 co l-lg-6 col-md-6 col-sm-12 col-12">
           <div class="cardss" data-aos="fade-right" data-aos-duration="2000">
             <div class="cards-img">
               <img src="img/person_2.jpg.webp" class="w-50 rounded-circle">
@@ -464,7 +467,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12">
           <div class="cardss" data-aos="fade-up" data-aos-duration="2000">
             <div class="cards-img">
               <img src="img/img_1.jpg.webp" class="w-50 rounded-circle">
@@ -475,7 +478,7 @@
             </div>
           </div>
         </div>
-        <div class="col-xl-4">
+        <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 col-12">
           <div class="cardss" data-aos="fade-right" data-aos-duration="2000">
             <div class="cards-img">
               <img src="img/person_3.jpg.webp" class="w-50 rounded-circle">
@@ -507,28 +510,28 @@
         </div>
         <div class="footer-site-2 col-xl-4">
           <div class="row">
-            <div class=" col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class=" col-xl-4 col-lg-4 col-md-6 col-sm-6 col-4">
               <img src="img/hero_bg_1.jpg.webp" width="100%">
             </div>
-            <div class="para col-xl-8 col-xl-8 col-lg-4 col-md-6 col-sm-12">
+            <div class="para col-xl-8 col-xl-8 col-lg-4 col-md-6 col-sm-6 col-8">
               <p class="text-white">SEP 16,2018</p>
               <p class="sec-4-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </div>
           </div>
           <div class="row mt-3">
-            <div class=" col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class=" col-xl-4 col-lg-4 col-md-6 col-sm-6 col-4">
               <img src="img/hero_bg_1.jpg.webp" width="100%">
             </div>
-            <div class="para col-xl-8 col-xl-8 col-lg-4 col-md-6 col-sm-12">
+            <div class="para col-xl-8 col-xl-8 col-lg-4 col-md-6 col-sm-6 col-8">
               <p class="text-white">SEP 16,2018</p>
               <p class="sec-4-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </div>
           </div>
           <div class="row mt-3">
-            <div class="col-xl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12">
+            <div class="col-xl-4 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-4">
               <img src="img/hero_bg_1.jpg.webp" width="100%">
             </div>
-            <div class="para col-xl-8 col-lg-4 col-md-6 col-sm-12">
+            <div class="para col-xl-8 col-lg-4 col-md-6 col-sm-6 col-8">
               <p class="text-white">SEP 16,2018</p>
               <p class="sec-4-para">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
             </div>
@@ -575,7 +578,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <iframe width="470" height="315" src="https://www.youtube.com/embed/DFmhX5h6Lig?si=Oa9it0YUJTcov6Yg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="100%" src="https://www.youtube.com/embed/DFmhX5h6Lig?si=Oa9it0YUJTcov6Yg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
