--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             </form>
           </div>
           <div class="col-xl-6 pt-3 mt-3">
-            <div class="left-part mt ps-5" data-aos="fade-right" data-aos-duration="2000">
+            <div class="left-part mt" data-aos="fade-right" data-aos-duration="2000">
             <h2 class="fs-1">
               ONLINE
               <strong><b> APPOINTMENT</b></strong>
@@ -256,14 +256,13 @@
     </section> 
     <section class="sec-4">
       <p   class="fs-3 text-center ">Promo For Tooth Cleaning from $<del>140.00</del> now $50.00</p >
-      <p class="text-center mt-5 sec-4-para"><strong class="fs-2 text-white"> 01</strong class="fs-2 text-white">weeks<strong class="fs-2 text-white"> 03</strong>days<strong class="fs-2 text-white"> 05</strong>hr<strong class="fs-2 text-white"> 05</strong>min<strong class="fs-2 text-white"> 30</strong>sec </p>
-      <ul>
-        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong></strong></a></li>
-        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong></strong></a></li>
-        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
-        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
-        <li class=" list-none"><a href="" class="navlink col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong></strong></a></li>
-      </ul>
+        <div class="row sec-4-para text-center">
+        <a href="" class="nav-link col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong class="fs-2 text-white">01 </strong>Weeks</a>
+          <a href="" class="nav-link col-xl-2 col-lg-3 col-md-12 col-sm-6 col-6"><strong class="fs-2 text-white">03 </strong>Days</a>
+          <a href="" class="nav-link col-xl-2 col-lg-3 col-md-12 col-sm-4 col-4"><strong class="fs-2 text-white">05 </strong>Hr</a>
+          <a href="" class="nav-link col-xl-3 col-lg-3 col-md-12 col-sm-4 col-4"><strong class="fs-2 text-white">07 </strong>Min</a>
+          <a href="" class="nav-link col-xl-3 col-lg-3 col-md-12 col-sm-4 col-4"><strong class="fs-2 text-white">30 </strong>Sec</a>
+      </div>
     </section>
     <section class="sec-5 mt">
       <div class="container">
@@ -348,7 +347,7 @@
             <p class="sec-4-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima iusto dolorum voluptates placeat fugit deleniti labore itaque non? Corporis omnis assumenda eligendi sapiente accusantium itaque nobis eveniet quam eos accusamus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt at unde ad impedit animi, molestiae optio iste eaque tempora ratione rem ducimus nulla aliquid ullam, maiores saepe eveniet ab eligendi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores temporibus consectetur dolore eveniet. Corporis accusantium, debitis eum doloribus illo ea laborum adipisci unde, eius veritatis quam cumque laboriosam, illum esse?</p>         
         </div>
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12" data-aos="fade-up" data-aos-duration="2000">
-          <img src="img/hero_bg_1.jpg.webp" style="position: relative;" class="w-100">
+          <img src="img/hero_bg_1.jpg.webp" style="position: relative;" class="w-100" height="500">
           <!-- Button trigger modal -->
           <button type="button" style="position: absolute; bottom: 0; right: 0; left: 0px; top: 230px; height: 40px;" class="btn btn-danger width" data-bs-toggle="modal" data-bs-target="#exampleModal1">
           <i class="fa-solid fa-play"></i>
